ex1.9_pingpong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ex9-svc
spec:
  type: ClusterIP
  selector:
    app: ex9
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 4001
